[gd_scene load_steps=3 format=3 uid="uid://bcpiirjfarhos"]

[ext_resource type="Script" uid="uid://hxwj1jxtw5j3" path="res://script/custom_button_demo.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dturr8so8g8cw" path="res://scene/custom_button.tscn" id="2"]

[node name="CustomButtonDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Custom Button Themes"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="OrangeButton" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
text = "Orange Theme"

[node name="DarkButton" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
text = "Dark Theme"

[node name="YellowButton" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
text = "Yellow Theme"

[node name="GreyButton" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
text = "Grey Theme"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CycleButton" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
text = "Cycle Themes"
